# portugal-parcels-scraper

./: .gitignore  README.md  pyproject.toml  scraper.py
src/portugal_parcels/: __init__.py  scraper.py
